Completing swagger and correcting minor bugs.
